Update fix IE sur .col-noalign
Transformation d'un table-cell en flottant pour vieux IE.

--- a/less/rocssti-fr.less
+++ b/less/rocssti-fr.less
@@ -968,8 +968,10 @@ select:focus:required:valid {
   display: none;
 }
 
-.ie7 .col, 
-.ie6 .col {
+.ie7 .col,
+.ie7 .col-noalign,
+.ie6 .col,
+.ie6 .col-noalign {
   float: left;
 }
 .ie7 .row,
